--- a/vercel.json
+++ b/vercel.json
@@ -5,32 +5,8 @@
             "dest": "/index.html"
         },
         {
-            "src": "/gemini/(.*)",
-            "dest": "https://generativelanguage.googleapis.com/$1"
-        },
-        {
-            "src": "/gemini/(.*)",
-            "dest": "https://generativelanguage.googleapis.com/$1"
-        },
-        {
-            "src": "/openai/(.*)",
-            "dest": "https://api.openai.com/$1"
-        },
-        {
-            "src": "/groq/(.*)",
-            "dest": "https://api.groq.com/$1"
-        },
-        {
-            "src": "/claude/(.*)",
-            "dest": "https://api.anthropic.com/$1"
-        },
-        {
-            "src": "/cohere/(.*)",
-            "dest": "https://api.cohere.ai/$1"
-        },
-        {
-            "src": "/xai/(.*)",
-            "dest": "https://api.x.ai/$1"
+            "src": "/(https?://.*)",
+            "dest": "$1"
         }
     ],
     "regions": [
